<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_addItem"
        android:orderInCategory="100"
        android:title="@string/menu_add"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_log"
        android:orderInCategory="100"
        android:title="@string/log"
        app:showAsAction="never"/>
    <item android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear_all"
        app:showAsAction="never"/>
    <item android:id="@+id/action_rebuild_fest"
        android:orderInCategory="100"
        android:title="@string/rebuild_festival"
        app:showAsAction="never"/>
    <item android:id="@+id/action_clearCache"
        android:orderInCategory="100"
        android:title="@string/menu_clear_glide_cache"
        app:showAsAction="never"/>
</menu>