<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EventManageActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:text="@string/preview"
                    android:textSize="16dp"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <include layout="@layout/eventitem_list_thumb" />
                <TextView
                    android:text="@string/blur"
                    android:textSize="16dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">
                    <TextView
                        android:text="@string/radius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <SeekBar
                        android:id="@+id/radiusSeekBar"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="255"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">
                    <TextView
                        android:text="@string/sampling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <SeekBar
                        android:id="@+id/samplingSeekBar"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="100"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">
                    <TextView
                        android:text="@string/dynamic_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.example.xiaox.countdowns.views.SwitchView
                        android:id="@+id/blurDynamicSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/nameEditText"
                    android:text="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:hint="@string/name"/>
                <EditText
                    android:id="@+id/celebrationEditText"
                    android:text="@string/celebration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:hint="@string/celebration"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16dp"
                        android:text="Time : "/>
                    <TextView
                        android:id="@+id/timeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:text="0000-00-00 00:00:00"/>
                </LinearLayout>
                <Button
                    android:id="@+id/setTimeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00c3eb"
                    android:text="@string/set_time_btn_text"
                    android:textColor="#ffffff"/>
                <Button
                    android:id="@+id/setImgBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_bg_btn_text"
                    android:textColor="#ffffff"
                    android:backgroundTint="#00c3eb"/>
                <Button
                    android:id="@+id/setForeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_fore_btn_text"
                    android:textColor="#ffffff"
                    android:backgroundTint="#00c3eb"/>
                <Button
                    android:id="@+id/positiveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_btn_text"
                    android:textColor="#ffffff"
                    android:backgroundTint="#00c3eb"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
